# skuldbot-runner

./: .env.example  .gitkeep  .pre-commit-config.yaml  Dockerfile  LICENSE  build.py  pyproject.toml  requirements.build.in
.github/workflows/: ip-gate.yml  ip-k09-smoke.yml  release.yml
scripts/security/: ensure_copyright_headers.py
src/skuldbot_runner/: __init__.py  agent.py  api_client.py  cli.py  config.py  executor.py  models.py  plan_adapter.py  protection.py  system_info.py
src/skuldbot_runner/secrets/: __init__.py  manager.py  providers.py
src/skuldbot_runner/web/: __init__.py  app.py
src/skuldbot_runner/web/templates/: base.html  config.html  index.html  logs.html  secrets.html
tests/: test_models_contract.py  test_plan_adapter.py
